Fix button style on mobile
The memories buttons were too big and wonky on mobile. Made them into a vertical stack on mobile.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -203,3 +203,11 @@ label[for="customRange2"] {
   height: auto;
   display: block;
 }
+
+@media screen and (max-width: 500px) {
+  .p-button {
+    width: 100%;
+    height: 1.5rem;
+    font-size: .75rem;
+  }
+}
